
Tom Charlesworth
tomch at users.berlios.de


Restrictions/bugs:
- SSI263 emulation is very basic: there is no attempt to emulate rate, inflection or filters.
- During Mockingboard playback, Speaker emulation isn't precise.
- For an original Apple //e, 80-column (PR#3) and INVERSE, it still appears to be mousetext character, but it should be inverted upper-case from $40 to $5F.


1.20.1 - 17 Jul 2011
--------------------
Fixes:
. [Bug #018242] Preserve drive's physical attributes (track, phase) when changing disk. (Fix for Platoon)


1.20.0 - 23 Feb 2011
--------------------
Changes:
. Standard, Text Optimized and Monochrome video modes now support half-pixel rendering accuracy!
. Colors tweaked to better match the real hardware.

Fixes:
. Fixed Mockingboard detection for Ultima III (ProDOS-8/harddisk version).

Debugger:
. See the Debugger_Changelog.txt for the various fixes and changes.

Misc:
. Updated acknowledgements. Cheers to Mike Harvey! (Nibble Magazine)


1.19.3 - 30 Dec 2010
--------------------
Changes:
. Set 50% scan lines as the default.

Fixes:
. Fix OpenFileName dialogs for Win98 (use older WinVer4 struct).
. Edits to the 'Printer dump filename' edit control are now recognised.


1.19.2 - 20 Dec 2010
--------------------
Changes:
. Added HD activity LED.
. Caps LED now takes up less space in full-screen mode.
. Debugger 2.7.0.0 (see Debugger_Changelog.txt)

Fixes:
. Fix for "APPLEWIN executed an invalid instruction" on Pentium II/266 CPU.
  - Rebuilt with Enhanced Instruction Set = Not Set (ie. no SSE/SSE2).


1.19.1 - 10 Dec 2010
--------------------
Changes:
. Rebuilt for Win98 with: VS2005 Express, Windows SDK 6.0, SAPI 5.1
. Improved detection of No-Slot-Clock accesses (GEOS now working).


1.19.0 - 28 Aug 2010
--------------------
Changes:
. Added No-Slot-Clock (located in $C300 ROM space).


1.18.2 - 17 Aug 2010
--------------------
Fixes:
. [Bug #017055] DDial timer running very fast.